--- a/style.css
+++ b/style.css
@@ -2,3 +2,64 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    background-color: red;
+    font-family: 'Poppins', sans-serif;
+    font-size: 50px;
+}
+#small{
+    display: block;
+    
+}
+#medium{
+    display: none;
+    
+}
+#large{
+    display: none;
+    
+}
+
+@media (min-width: 481px) and (max-width: 1023px) {
+    body{
+        background-color: green;
+        font-family: 'Edu QLD Beginner', cursive;
+        font-size: 30px;
+        
+    }
+    #small{
+        display: none;
+        
+    }
+    #medium{
+        display: block;
+        
+    }
+    #large{
+        display: none;
+        
+    }
+    
+    
+}
+@media (min-width: 1024px){
+    body{
+        background-color: blue;
+        font-family: 'Roboto Mono', monospace;
+        font-size: 20px;
+        display: flex;
+    }
+    #small{
+        display: none;
+        
+    }
+    #medium{
+        display: none;
+        
+    }
+    #large{
+        display: block;
+        
+    }
+}
